# 42

born2beroot/: signature.txt
cub3d/: Makefile
cub3d/includes/: commons.h  get_next_line.h
cub3d/maps/: backroom.cub  map.cub  map2.cub  map3.cub
cub3d/sources/: main.c  memory.c  utils.c
ft_printf/: Makefile
ft_printf/includes/: ft_printf.h
ft_printf/sources/: ft_printf.c  ft_utils.c
get_next_line/includes/: get_next_line.h  get_next_line_bonus.h
get_next_line/sources/: get_next_line.c  (+3 more)
inception/: .gitignore  Makefile
leaffliction/: .gitignore  README.md  pyproject.toml
leaffliction/sources/: Augmentation.py  Distribution.py  Transformation.py  generate_dataset.py  predict.py  train.py
libft/: Makefile  ft_atoi.c  ft_lstiter_bonus.c  ft_lstnew_bonus.c  ft_memchr.c  ft_memset.c  ft_putendl_fd.c  ft_strdup.c  ft_strncmp.c  ft_toupper.c
matrix/: Makefile
minishell/: Makefile  grammar.txt  valgrind.supp
multilayer_perceptron/: .gitignore  README.md  pyproject.toml
netpractice/: level1.json  level10.json  level2.json  level3.json  level4.json  level5.json  level6.json  level7.json  level8.json  level9.json
philosophers/: Makefile
pipex/: Makefile  README.md
push_swap/: Makefile
python_for_data_science/: .gitignore
python_for_data_science/m0/ex09/: README.md  pyproject.toml
python_for_data_science/m0/ex09/src/ft_package/: main.py
ready_set_boole/: README.md  ex00.py  ex01.py  ex02.py  ex03.py  ex04.py  ex05.py  ex06.py  ex07.py  ex08.py  ex09.py  ex10.py  ex11.py
so_long/: Makefile
webserv/: .gitignore  Makefile
(+499 files in other folders)
