[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "ft_package"
version = "0.0.1"
summary = "A sample test package"
authors = [
  { name="uwywijas", email="uwywijas@42mulhouse.fr" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/slqye"
